--- a/commandservice/src/main/resources/application.yml
+++ b/commandservice/src/main/resources/application.yml
@@ -5,12 +5,12 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
 
   datasource:
-    url: jdbc:mysql://localhost:3306/stock_market
-    username: root
-    password: pass@word1
+    url: jdbc:mysql://localhost:3306/stock_market?createDatabaseIfNotExist=true
+    username: stock
+    password: stock123
     driver-class-name: com.mysql.cj.jdbc.Driver
 server:
   port : 8082
