--- a/commandservice/src/main/resources/application.yml
+++ b/commandservice/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     username: stock
     password: stock123
     driver-class-name: com.mysql.cj.jdbc.Driver
+  jackson:
+    date-format: dd-MM-yyyy hh:mm:ss  
+    time-zone: Asia/Kolkata
 server:
-  port : 8082
+  port : 8081
 
