--- a/commandservice/src/main/resources/application.yml
+++ b/commandservice/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
   datasource:
     url: jdbc:mysql://localhost:3306/stock_market?createDatabaseIfNotExist=true
