--- a/queryservice/pom.xml
+++ b/queryservice/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>com.cognizant.fse</groupId>
-            <artifactId>commandservice</artifactId>
+            <artifactId>commonutils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
