--- a/commandservice/src/main/resources/application.yml
+++ b/commandservice/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
     password: stock123
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
-    date-format: dd-MM-yyyy hh:mm:ss  
+    date-format: dd-MM-yyyy
     time-zone: Asia/Kolkata
 server:
-  port : 8081
+  port : 8082
 
