--- a/queryservice/pom.xml
+++ b/queryservice/pom.xml
@@ -24,11 +24,16 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.cognizant.fse</groupId>
             <artifactId>commonutils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        
            </dependencies>
 
     <build>
