--- a/queryservice/src/main/resources/application.yml
+++ b/queryservice/src/main/resources/application.yml
@@ -1,22 +1,39 @@
 spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   application:
     name: queryservice
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-
-  datasource:
-    url: jdbc:mysql://localhost:3306/stock_market?createDatabaseIfNotExist=true
-    username: stock
-    password: stock123
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  kafka:
+    listener:
+      missing-topics-fatal: false
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: group_id
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  data:
+        mongodb:
+            database: stock_market_query
+            uri: mongodb://localhost:27017/stock_market_query?maxpoolsize=5
+            repositories:              type: auto
+            
+#  jpa:
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: update
+#    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/stock_market?createDatabaseIfNotExist=true
+#    username: stock
+#    password: stock123
+#    driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
     date-format: dd-MM-yyyy
     time-zone: Asia/Kolkata
 server:
-  port : 8081
+  port : 8082
 
   
 
