--- a/queryservice/src/main/resources/application.yml
+++ b/queryservice/src/main/resources/application.yml
@@ -34,6 +34,34 @@ spring:
     time-zone: Asia/Kolkata
 server:
   port : 8082
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    preferIpAddress: true
+  lease-renewal-interval-in-seconds: 30
 
+---
+spring:
+  profiles: docker
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+  application:
+    name: queryservice
+  kafka:
+    bootstrap-servers: kafka:9092
+    consumer:
+      group-id: group_id
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  data:
+    mongodb:
+      uri: mongodb://mongo_db:27017/stock_market
+server:
+  port : 8082
   
 
