--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -3,27 +3,26 @@ server:
 
 spring:
   application:
-    name: api-gateway
+    name: apigateway
 
 zuul:
-  prefix: /api
+#  prefix: /api/v1
   routes:
-    user:
-      path: /users/**
-      serviceId: user-service
-    site:
-      path: /sites/**
-      serviceId: site-service
-    organization:
-      path: /organizations/**
-      serviceId: organization-service
+    commondservice:
+      path: /command/**
+      serviceId: commondservice
+    queryservice:
+      path: /query/**
+      serviceId: queryservice
+ 
 
-ribbon:
-  eureka:
-    enabled: true
+#ribbon:
+#  eureka:
+#    enabled: true    
 
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-    registerWithEureka: true
