--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -16,19 +16,20 @@ zuul:
       serviceId: queryservice
  
 
-ribbon:
-   ReadTimeout: 60000
-   connection-timeout: 3000
-   eureka:
-      enabled: true
-      
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 5000      
+#ribbon:
+#   readTimeout: 5000
+#   connection-timeout: 3000
+#   eureka:
+#      enabled: true
+#      
+#hystrix:
+#  commandservice:
+#    default:
+#      execution:
+#        isolation:
+#          thread:
+#            timeoutInMilliseconds: 40000   
+            
       
 
 eureka:
@@ -37,3 +38,6 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    preferIpAddress: true
+    lease-renewal-interval-in-seconds: 30
