--- a/commandservice/src/main/resources/application.yml
+++ b/commandservice/src/main/resources/application.yml
@@ -32,7 +32,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     preferIpAddress: true
-  lease-renewal-interval-in-seconds: 30
+    lease-renewal-interval-in-seconds: 30
   
 #commandservice:
 #  ribbon:
@@ -46,14 +46,14 @@ spring:
   kafka:
     bootstrap-servers: kafka:9092
     producer:
-      group-id: group_id
       key-serializer: org.apache.kafka.common.serialization.LongSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer  
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+#    properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
   datasource:
     url: jdbc:mysql://db:3306/stock_market?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
