Cloud and Docker configured Docker images and containers working fine

--- a/commandservice/src/main/resources/application.yml
+++ b/commandservice/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+  profiles: default
   application:
     name: commandservice
   kafka:
@@ -56,9 +57,22 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
   datasource:
-    url: jdbc:mysql://db:3306/stock_market?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: pass@word1
+    url: jdbc:mysql://mysqldb:3306/stock_market?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+    username: stock
+    password: stock123
     driver-class-name: com.mysql.cj.jdbc.Driver
+  jackson:
+    date-format: dd-MM-yyyy
+    time-zone: Asia/Kolkata
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://sm-registry:8761/eureka/
+  instance:
+    preferIpAddress: true
+    lease-renewal-interval-in-seconds: 30
+ 
 server:
   port: 8081
