--- a/serviceregistry/src/main/resources/application.yml
+++ b/serviceregistry/src/main/resources/application.yml
@@ -1,4 +1,18 @@
 spring:
+  profiles: default
+  application:
+    name: serviceregistry
+eureka:
+  client:
+    registerWithEureka: false  
+    fetchRegistry: false 
+server:
+  port : 8761
+  
+---
+  
+spring:
+  profiles: docker
   application:
     name: serviceregistry
 eureka:
