Removed unused imports Added docker-compose yml file

--- a/commandservice/Dockerfile
+++ b/commandservice/Dockerfile
@@ -1,4 +1,4 @@
 FROM adoptopenjdk/openjdk11:alpine-jre
-ADD target/commandservice-0.0.1-SNAPSHOT-exec.jar commandservice.jar
+ADD commandservice/target/commandservice-0.0.1-SNAPSHOT-exec.jar commandservice.jar
 ENTRYPOINT ["java","-Dspring.profiles.active=docker", "-jar","commandservice.jar"]
 EXPOSE 8081
