--- a/authservice/src/main/resources/application.yml
+++ b/authservice/src/main/resources/application.yml
@@ -1,18 +1,41 @@
 server:
   port: 9191
 spring:
+  application:
+    name: authservice
   datasource:
-    url:  jdbc:mysql://localhost:3306/auth?createDatabaseIfNotExist=true
+    url:  jdbc:mysql://localhost:3306/authDB?createDatabaseIfNotExist=true
     username: stock
     password: stock123
     driver-class-name: com.mysql.cj.jdbc.Driver
+    jdbc-url: ${spring.datasource.url}
+    jdbcUrl: ${spring.datasource.url}
     initialization-mode: always
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    
-app:
+    properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+security:
+  oauth2:
+    resource:
+      filter-order: 3
+  signing-key: MaYzkSjmkzPC57L
+  encoding-strength: 256
+  security-realm: Spring Boot JWT Example Realm
   jwt:
-    key: ram    
+    client-id: testjwtclientid
+    client-secret: XY7kmzoNzl100
+    grant-type: password
+    scope-read: read
+    scope-write: write
+    resource-ids: testjwtresourceid
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    preferIpAddress: true
+  lease-renewal-interval-in-seconds: 30
