--- a/apigateway/Dockerfile
+++ b/apigateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk14:alpine-jre
-ADD target/apigateway-0.0.1-SNAPSHOT.jar apigateway.jar
+FROM adoptopenjdk/openjdk11:alpine-jre
+ADD apigateway/target/apigateway-0.0.1-SNAPSHOT.jar apigateway.jar
 ENTRYPOINT ["java","-Dspring.profiles.active=docker", "-jar","apigateway.jar"]
 EXPOSE 8083
