--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -26,7 +26,8 @@ zuul:
       sensitiveHeaders:
       serviceId: authservice  
   host:
-    connect-timeout-millis: 246000    
+    connect-timeout-millis: 10000   
+    socket-timeout-millis: 1000000
  
 
 ribbon:
@@ -34,25 +35,39 @@ ribbon:
     enabled: true
     clients: commandservice, queryservice, authservice
   eureka:
-    enabled: true    
+    enabled: true      
   ReadTimeout: 246000
   Connection-timeout: 246000
 
-#commandservice:
-#  ribbon:  
-#    ActiveConnectionsLimit: 500
-#    
-#queryservice:
-#  ribbon:  
-#    ActiveConnectionsLimit: 500    
-            
+
+commandservice:
+  ribbon:  
+    ActiveConnectionsLimit: 500
+    listOfServers: http://localhost:8081
+    ReadTimeout: 246000
+    Connection-timeout: 246000
+queryservice:
+  ribbon:  
+    ActiveConnectionsLimit: 500
+    listOfServers: http://localhost:8082
+    ReadTimeout: 246000
+    Connection-timeout: 246000
+authservice:
+  ribbon:  
+    ActiveConnectionsLimit: 500  
+    listOfServers: http://localhost:9191      
+    ReadTimeout: 246000
+    Connection-timeout: 246000    
+        
 hystrix:
   command:
     default:
       execution:
+        timeout:
+          enabled: false
         isolation:
           thread:
-            timeoutInMilliseconds: 494000   
+            timeoutInMilliseconds: 1000000
           strategy: THREAD           
       
 
@@ -85,12 +100,19 @@ zuul:
   routes:
     commandservice:
       path: /command/**
+      sensitiveHeaders:
       serviceId: commandservice
     queryservice:
       path: /query/**
+      sensitiveHeaders:
       serviceId: queryservice
+    authservice:
+      path: /auth/**
+      sensitiveHeaders:
+      serviceId: authservice  
   host:
-    connect-timeout-millis: 246000    
+    connect-timeout-millis: 10000   
+    socket-timeout-millis: 1000000    
  
 
 ribbon:
