--- a/commandservice/src/main/resources/application.yml
+++ b/commandservice/src/main/resources/application.yml
@@ -72,7 +72,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
   datasource:
-    url: jdbc:mysql://sm-mysql:3306/stock_market?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://sm-mysql:3307/stock_market?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: stock
     password: stock123
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -91,3 +91,18 @@ eureka:
  
 server:
   port: 8081
+
+security:
+  oauth2:
+    resource:
+      filter-order: 3
+  signing-key: MaYzkSjmkzPC57L
+  encoding-strength: 256
+  security-realm: Spring Boot JWT Example Realm
+  jwt:
+    client-id: testjwtclientid
+    client-secret: XY7kmzoNzl100
+    grant-type: password
+    scope-read: read
+    scope-write: write
+    resource-ids: testjwtresourceid  
